--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
 python:
   - "2.7"
-install: "pip install bs4 --use-mirrors"
+install: "pip install python-bs4 --use-mirrors"
 script: nosetests -v tests
