fixed directory creating in setup_mongo, added script to find and kill existing mongo connections, overall script enhancements

--- a/mongodb.conf
+++ b/mongodb.conf
@@ -8,7 +8,7 @@ processManagement:
 net:
     port: 24730
 storage:
-    dbPath: "/path/to/db"
+    dbPath: "/data/mongod/mobileparser"
     smallFiles: true
     journal:
         enabled: true
